# EasiFlux-Desktop

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  easiflux_desktop.spec  easiflux_desktop_onefile.spec  pyproject.toml  requirements-build.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml
docs/: windows-packaging.md
resources/styles/: dark.qss  light.qss
scripts/: build.py  build_windows.ps1  clean.py
src/easiflux_desktop/: __init__.py  __main__.py  app.py
src/easiflux_desktop/adapters/: model_mapper.py  rest_adapter.py  sdk_client_factory.py  ws_adapter.py
src/easiflux_desktop/core/: command_bus.py  commands.py  constants.py  context.py  errors.py  event_bus.py  state_store.py
src/easiflux_desktop/models/: account.py  config.py  market.py  trading.py
src/easiflux_desktop/services/: account_manager.py  analytics_service.py  config_manager.py  connection_manager.py  market_manager.py  multi_account_manager.py  risk_manager.py  strategy_manager.py  trading_manager.py
src/easiflux_desktop/storage/: cache_store.py  config_store.py  credential_store.py  trade_log_store.py
src/easiflux_desktop/views/: main_window.py  (+5 more)
tests/: conftest.py
tests/integration/: test_app_context.py  test_command_wiring.py  test_startup.py
tests/unit/: test_analytics.py  test_config_store.py  test_event_bus.py  test_model_mapper.py  test_multi_account_manager.py  test_p1_ui_feedback.py  test_p2_analytics_view.py  test_risk_manager.py  test_settings_view.py  test_state_store.py  test_trade_log_store.py  test_ws_adapter.py
(+7 files in other folders)
